--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -94,13 +94,14 @@ body {
 
 .header__logo {
 	position: absolute;
-	margin: 0;
-	top: 50%;
-	transform: translate(0, -50%);
-	-webkit-transform: translate(0, -50%);
-	-moz-transform: translate(0, -50%);
-	-ms-transform: translate(0, -50%);
-	-o-transform: translate(0, -50%);
+
+	top: 60px;
+	left: 50%;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(, -50%);
+	-moz-transform: translateX(, -50%);
+	-ms-transform: translateX(, -50%);
+	-o-transform: translateX(, -50%);
 }
 
 .header-block {
@@ -174,7 +175,7 @@ body {
 	height: 38px;
 }
 
-.personal__list:last-child::after {
+.personal__list::after {
 	position: absolute;
 	content: "";
 	display: block;
