--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -801,16 +801,20 @@ body {
 
 .instagram__inner {
 	display: flex;
-	justify-content: space-between;
+	/* justify-content: space-between; */
 	margin-top: 45px;
 }
 
 .instagram__picture {
 	position: relative;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
 
+	display: flex;
+	flex: 1 0 20%;
+}
+.instagram__img {
+	width: 100%;
+	object-fit: contain;
+}
 .instagram__picture::before {
 	position: absolute;
 	content: "";
