--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -50,7 +50,7 @@
 }
 
 body {
-	font-family: Muli, sans-serif;
+	/* font-family: Muli, sans-serif; */
 	/* font-size: 16px;
 	letter-spacing: -0.02em;
 	line-height: 40px;
