--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,83 @@ body {
 	-o-border-radius: 35px;
 }
 
-.header__title {
+.smoothies {
+	padding: 100px 0 100px;
+}
+
+.smoothies__title {
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+.title {
 	font-size: 50px;
+	line-height: 40px;
+	font-weight: 800;
+	letter-spacing: -0.02em;
+}
+
+.title--orange {
+	color: #f7ae3b;
+}
+
+.smoothies__text {
+	max-width: 915px;
+	text-align: center;
+	margin: 0 auto;
+	padding-bottom: 60px;
+}
+
+.text {
+	font-size: 18px;
+	line-height: 35px;
+}
+
+.text--black {
+	color: #1e1e1e;
+}
+
+.smoothies__cards {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	gap: 2px;
+	justify-content: center;
+	background-color: #f6edde;
+	max-width: 1010px;
+	margin: 0 auto;
+}
+
+.cards__item {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	width: 260px;
+	height: 194px;
+	background-color: #fff;
+}
+
+.cards__icon {
+	margin: 20px 0 8px;
+}
+
+.cards__desc {
+	font-size: 25px;
+	line-height: 40px;
+	font-weight: 800;
+	letter-spacing: -0.02em;
+	color: #f2612d;
+	padding-top: 10px;
+}
+
+.cards__item:last-child {
+	border: none;
+}
+
+.cards__item:nth-child(4) {
+	border-right: none;
+}
+
+.cards__item:nth-child(1n + 5) {
+	border-bottom: none;
 }
